--- a/index.html
+++ b/index.html
@@ -5,37 +5,55 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
     <style>
-      html, body, #map-canvas {
-        height: 100%;
-        margin: 0px;
-        padding: 0px
+      #map {
+        height:100%;
+        width:800px;
+        /*margin: auto;*/
       }
     </style>
+    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
+    <script src="http://cooper-union-maps-proxy.herokuapp.com/js/draw.js"></script>
     <script>
       //set up the google map
-      var lat = prompt("Enter Latitude:");
-      var lon = prompt("Enter Longitude:");
+      // var lat = prompt("Enter Latitude:");
+      // var lon = prompt("Enter Longitude:");
 
-      var map;
-      //create a function that runs when the page is ready
-      var initialize = function() {
-        //set some default options
+      $(document).ready(function(){
         var mapOptions = {
           zoom: 17, //very close
-          center: new google.maps.LatLng(lat, lon) //cooper union 40.727643, -73.989935
+          center: new google.maps.LatLng(40.7293, -73.9906) //cooper union 40.727643, -73.989935
         };
-        //create a new map, and have it populate the #map-canvas html element
-        var map = new google.maps.Map(document.getElementById('map-canvas'),
-            mapOptions);
-      }
+        var positions = [
+          {
+            'title':'Foundation building',
+            'map': new google.maps.LatLng(40.7291, -73.9906),
+            'link':'http://cooper.edu',
+            'html':'<img src=http://placehold.it/350x150 />'
+          },
+          {
+            'title':'Cooper Square Park',
+            'map':new google.maps.LatLng(40.72875, -73.9908),
+            'link':'http://cooper.edu'
+          },
+          {
+            'title':'Cooper Union New Building',
+            'map': new google.maps.LatLng(40.7287, -73.99025),
+            'link':'http://cooper.edu'
+          },
+          {
+            'title':'Video Games New York',
+            'map': new google.maps.LatLng(40.7278926,-73.99058),
+            'link':'http://www.videogamesnewyork.com/'
+          }
+        ];
+        draw('map', mapOptions, positions);
       //add the map to the page, when the page is ready
-      google.maps.event.addDomListener(window, 'load', initialize);
-    
+      // google.maps.event.addDomListener(window, 'load', initialize);
+      });
     </script>
   </head>
   <body>
-    <p>
-    <div id="map-canvas"></div>
+    <div id="map"></div>
   </body>
 </html>
